--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -22,12 +22,7 @@
         Projects
       </a>
 
-      <a class="nav-item nav-item-email-link with-icon undecorated-link flex-child--right" href="mailto:contact@taravancil.com">
-        <!-- <span class="icon-container"> -->
-        <!-- <span aria-hidden="true" class="icon envelope">&#9993;</span> -->
-        <!-- <span class="icon-label">Email</span> -->
-        <!-- </span> -->
-
+      <a class="nav-item undecorated-link nav-item-email-link flex-child--right" href="mailto:contact@taravancil.com">
         <span class="label">contact@taravancil.com</span>
       </a>
     </div>
