--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,20 +1,8 @@
-%col {
-  min-width: 80px;
-  max-width: 150px;
-}
-
 .grid {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  display: grid;
+  grid-gap: 15px;
 }
 
-%col-1 {
-    @extend %col;
-    flex-basis: 20%;
-}
-
-%col-2 {
-    @extend %col;
-    flex-basis: 40%;
+.grid--300 {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
