--- a/src/scss/theme/_headings.scss
+++ b/src/scss/theme/_headings.scss
@@ -30,8 +30,8 @@ h3 {
 
 h4 {
   text-transform: uppercase;
-  letter-spacing: .3px;
-  font-size: .825rem;
+  letter-spacing: 0.3px;
+  font-size: 0.825rem;
   margin: 10px 0 5px 0;
 }
 
