Update border styles for /projects items

--- a/src/scss/pages/projects.scss
+++ b/src/scss/pages/projects.scss
@@ -1,14 +1,16 @@
-@import '../base/colors';
+@import "../base/colors";
 
 .project-screenshots {
   grid-template-columns: repeat(auto-fill, minmax(350px, 400px));
 }
 
-a:hover .project-screenshot {
-  border-color: #000;
-}
-
 .project-screenshot {
   border: 1px solid $purple--border;
+  padding: 4px;
   max-width: 100%;
+}
+
+a:hover .project-screenshot {
+  border: 5px solid $teal--transparent;
+  padding: 0;
 }
