--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,5 @@
 @import 'utils/all';
 @import 'base/all';
 @import 'layout/all';
+@import 'theme/all';
 @import 'components/all';
-@import 'themes/all';
-@import 'pages/all';
