Remove unused .module class

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -180,7 +180,7 @@
           </div>
         </section>
 
-        <section class="module highlighted-links">
+        <section class="highlighted-links">
           <div class="nails link">
             <img src="/images/emoji/nails.png" aria-hidden="true" class="icon" />
 
