--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,7 +1,6 @@
-@import 'footnotes';
-@import 'figure';
-@import 'rc-scout';
-@import 'avatar';
-@import 'buttons';
-@import 'icons';
-@import 'breadcrumbs';
+@import "footnotes";
+@import "figure";
+@import "rc-scout";
+@import "avatar";
+@import "buttons";
+@import "breadcrumbs";
