Use larr and rarr everywhere for arrow characters

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -129,7 +129,7 @@
             </ul>
 
             <a href="/blog" class="btn btn--small small-text">
-              View all posts ->
+              View all posts &rarr;
             </a>
           </div>
 
@@ -163,7 +163,7 @@
             </a>
 
             <a href="/speaking" class="btn btn--small small-text">
-              View all presentations ->
+              View all presentations &rarr;
             </a>
           </div>
         </section>
@@ -174,7 +174,7 @@
 
             <div>
               <a class="heading undecorated-link" href="/nails">
-                Nails →
+                Nails &rarr;
               </a>
 
               <p class="small-text">
@@ -197,7 +197,7 @@
 
             <div>
               <a class="heading undecorated-link" href="/projects">
-                My projects →
+                My projects &rarr;
               </a>
 
               <p class="small-text">
@@ -229,7 +229,7 @@
 
             <div>
               <a class="heading undecorated-link" href="https://opencollective.com/beaker">
-                Support my work →
+                Support my work &rarr;
               </a>
 
               <p class="small-text">
@@ -243,7 +243,7 @@
 
             <div>
               <a class="heading undecorated-link" href="/feed">
-                My feed →
+                My feed &rarr;
               </a>
 
               <p class="small-text">
