Add .italic class

--- a/src/scss/theme/_type.scss
+++ b/src/scss/theme/_type.scss
@@ -40,6 +40,10 @@ body {
   color: $color-text--muted;
 }
 
+.italic {
+  font-style: italic;
+}
+
 ::-moz-selection {
   background: $teal--transparent;
 }
