Implement preloading and DNS prefetch

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,9 +22,16 @@
   <meta name="twitter:card" content="summary">
 
   <link rel="canonical" href="{{ .URL }}" />
+
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="dns-prefetch" href="https://recurse-scout.com">
+  <link rel="preconnect" href="https://recurse-scout.com">
+  <link rel="preload" href="https://www.recurse-scout.com/loader.js?t=0dcb1e3c1156a3fd0bda3cd94cfb434f" as="script">
+  <link rel="preload" href="/css/style.min.css" as="style" />
+
   <link rel="stylesheet" href="/css/style.min.css" />
   {{ if .Params.css }}
-    <link rel="stylesheet" href="{{ .Params.css }}" />
+  <link rel="stylesheet" href="{{ .Params.css }}" />
   {{ end }}
   <link rel="icon" href="/images/favicon.png">
 </head>
