--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -19,6 +19,11 @@
   <meta name="twitter:card" content="summary">
 
   <link rel="canonical" href="https://taravancil.com{{ .URL }}" />
+
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="preload" href="/css/style.min.css" as="style" />
+  <link rel="preload" href="/css/blog.min.css" as="style" />
+
   <link rel="stylesheet" href="/css/style.min.css" />
   <link rel="stylesheet" href="/css/blog.min.css" />
   <link rel="icon" href="/images/favicon.png">
