--- a/layouts/section/speaking.html
+++ b/layouts/section/speaking.html
@@ -18,6 +18,9 @@
 
   <meta name="twitter:card" content="summary">
 
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="preload" href="/css/style.min.css" as="style" />
+
   <link rel="stylesheet" href="/css/style.min.css" />
   <link rel="icon" href="/images/favicon.png">
 </head>
