--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,11 @@
   <meta name="twitter:card" content="summary">
 
   <link rel="canonical" href="https://taravancil.com" />
+
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="preload" href="/css/style.min.css" as="style" />
+  <link rel="preload" href="/css/home.min.css" as="style" />
+
   <link rel="stylesheet" href="/css/style.min.css" />
   <link rel="stylesheet" href="/css/home.min.css" />
 
