--- a/layouts/section/projects.html
+++ b/layouts/section/projects.html
@@ -16,6 +16,10 @@
   <meta property="og:title" content="Projects - Tara Vancil">
   <meta name="twitter:title" content="Projects - Tara Vancil">
 
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="preload" href="/css/style.min.css" as="style" />
+  <link rel="preload" href="/css/projects.min.css" as="style" />
+
   <link rel="stylesheet" href="/css/style.min.css" />
   <link rel="stylesheet" href="/css/projects.min.css" />
   <link rel="icon" href="/images/favicon.png">
