--- a/layouts/nails/single.html
+++ b/layouts/nails/single.html
@@ -74,14 +74,14 @@
 
           {{ if .PrevInSection }}
           <a class="btn prev" href="{{ .PrevInSection.URL }}">
-            &larr; Previous: {{ .PrevInSection.Title }} <img class="thumbnail" alt="{{ .PrevInSection.Params.caption }}"
+            &larr; Previous: {{ .PrevInSection.Title }} <img width="35" height="35" class="thumbnail" alt="{{ .PrevInSection.Params.caption }}"
               src="{{ .PrevInSection.Params.img }}" />
           </a>
           {{ end }}
 
           {{ if .NextInSection }}
           <a class="btn next" href="{{ .NextInSection.URL }}">
-            <img class="thumbnail" alt="{{ .NextInSection.Params.caption }}" src="{{ .NextInSection.Params.img }}" />
+            <img width="35" height="35" class="thumbnail" alt="{{ .NextInSection.Params.caption }}" src="{{ .NextInSection.Params.img }}" />
             Next: {{ .NextInSection.Title }} &rarr;
           </a>
           {{ end }}
