Don't show email on small screens

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -22,7 +22,7 @@
         Projects
       </a>
 
-      <a class="nav-item undecorated-link nav-item-email-link flex-child--right" href="mailto:contact@taravancil.com">
+      <a class="nav-item undecorated-link nav-item-email-link flex-child--right tablet-el" href="mailto:contact@taravancil.com">
         <span class="label">contact@taravancil.com</span>
       </a>
     </div>
