Update /speaking and add Cascadia slides

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -139,22 +139,12 @@
           </div>
 
           <div class="speaking flex">
-            <h2 class="inline-heading">
-              Upcoming presentations
-            </h2>
+            <h2 class="inline-heading">Upcoming presentations</h2>
 
             <ul class="upcoming-talks small-text">
-              <li class="talk">
-                <span class="info">
-                  Nov. 15-16
-                  <span aria-hidden="true" class="separator">/</span>
-                  Seattle
-                </span>
-
-                <a class="title" href="https://2018.cascadiajs.com/speakers/tara-vancil">
-                  CascadiaJS
-                </a>
-              </li>
+              <p>
+                <em>No upcoming presentations</em>
+              </p>
             </ul>
 
             <a href="https://www.youtube.com/watch?v=rJ_WvfF3FN8" class="highlighted-talk wavy small-text">
@@ -163,7 +153,7 @@
               </div>
 
               <p>
-                Watch my JSConf EU talk, <br><em>Imagine this: a Web without servers</em>
+                Watch my JSConf EU talk, <br /><em>Imagine this: a Web without servers</em>
               </p>
             </a>
 
