--- a/layouts/section/speaking.html
+++ b/layouts/section/speaking.html
@@ -1,28 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Speaking- Tara Vancil</title>
 
   <!-- open graph -->
   <meta property="og:url" content="https://taravancil.com/wishlist" />
 
-  <meta property="og:type" content="website">
+  <meta property="og:type" content="website" />
 
-  <meta property="twitter:site" content="@taravancil">
+  <meta property="twitter:site" content="@taravancil" />
 
-  <meta property="og:title" content="Speaking - Tara Vancil">
-  <meta name="twitter:title" content="Speaking - Tara Vancil">
+  <meta property="og:title" content="Speaking - Tara Vancil" />
+  <meta name="twitter:title" content="Speaking - Tara Vancil" />
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary" />
 
-  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
+  <link rel="dns-prefetch" href="https://fonts.taravancil.com" />
   <link rel="preload" href="/css/style.min.css" as="style" />
 
   <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="icon" href="/images/favicon.png">
+  <link rel="icon" href="/images/favicon.png" />
 </head>
 
 <body class="speaking">
@@ -33,37 +33,18 @@
       <h1>Speaking</h1>
 
       <p>
-        I've spoken at a handful of events, mostly about the Web and peer-to-peer protocols. Want to invite me to your
-        event? <a href="mailto:contact@taravancil.com">Email me</a>! I'm taking it easy in 2019, but I might consider
-        speaking at an event or two.
+        I've spoken at a handful of events, mostly about the Web and
+        peer-to-peer protocols. Want to invite me to your event?
+        <a href="mailto:contact@taravancil.com">Email me</a>! I'm taking it
+        easy in 2019, but I might consider speaking at an event or two.
       </p>
 
       <h2 class="inline-heading">Upcoming presentations</h2>
 
       <ul class="upcoming-talks">
-        <li class="talk">
-          <span class="info">
-            Nov. 15-16
-            <span aria-hidden="true" class="separator">/</span>
-            Seattle
-          </span>
-
-          <a class="title " href="https://2018.cascadiajs.com/speakers/tara-vancil">
-            CascadiaJS
-          </a>
-        </li>
-
-        <li class="talk">
-          <span class="info">
-            Oct. 18
-            <span aria-hidden="true" class="separator">/</span>
-            Buenos Aires
-          </span>
-
-          <a class="title " href="https://2018.nodeconf.com.ar/">
-            Nodeconf AR
-          </a>
-        </li>
+        <p>
+          <em>No upcoming presentations</em>
+        </p>
       </ul>
 
       <div class="talks">
@@ -81,9 +62,7 @@
 
               {{ if eq .type "talk" }}
               <div class="small-text">
-
-                <span class="event"> {{ .event }}</span>
-                in
+                <span class="event"> {{ .event }}</span> in
                 <span class="location"> {{ .location }}</span>
               </div>
               {{ else }}
@@ -91,28 +70,21 @@
               {{ end }}
 
               {{ if .description }}
-              <p class="description small-text">
-                {{ .description }}
-              </p>
+              <p class="description small-text">{{ .description }}</p>
               {{ end }}
 
               {{ if or .slides .recording }}
               <div class="links">
                 {{ if .recording }}
                 <a class="recording btn btn--small" href="{{ .recording }}">
-                  {{ if eq .type "talk" }}
-                  Watch
+                  {{ if eq .type "talk" }} Watch
                   <span class="btn-icon btn-icon--right" aria-hidden="true">▶</span>
-                  {{ else }}
-                  Listen
-                  {{ end }}
+                  {{ else }} Listen {{ end }}
                 </a>
                 {{ end }}
 
                 {{ if .slides }}
-                <a class="slides small-text" href="{{ .slides }}">
-                  Slides
-                </a>
+                <a class="slides small-text" href="{{ .slides }}"> Slides </a>
                 {{ end }}
               </div>
               {{ end }}
