update about copy

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -104,12 +104,12 @@
       <div class="container narrow">
         <section class="hero-blurb">
           <p class="large-text">
-            Hi! I'm Tara. I do a lot of things—code, write, design, but most of all, I love building on the Web.
+            Hi! I'm Tara. I'm a software engineer at <a href="https://glitch.com">Glitch</a>, where I work on our in-browser <a href="https://glitch.com/edit">code editor</a>. I live in New York City.
           </p>
 
           <p>
-            I currently work on <a href="https://beakerbrowser.com">Beaker</a>, an experimental browser that explores
-            what happens when you integrate a p2p protocol into the Web.
+            Before Glitch, I worked on <a href="https://beakerbrowser.com">Beaker</a>, an experimental browser that explores
+            what happens when you integrate a peer-to-peer protocol into the Web.
             <a class="tour-link wavy" href="https://beakerbrowser.com/docs/tour">
               Take a tour of Beaker
               <img class="magnify" aria-hidden="true" src="/images/emoji/magnify-right.png" />
