--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -1,33 +1,8 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Blog - Tara Vancil</title>
-
-  <meta name="author" content="Tara Vancil">
-  <meta property="og:url" content="https://taravancil.com/blog">
-
-  <meta property="og:type" content="website">
-
-  <meta property="twitter:site" content="@taravancil">
-
-  <meta property="og:title" content="Blog - Tara Vancil">
-  <meta name="twitter:title" content="Blog - Tara Vancil">
-
-  <meta name="twitter:card" content="summary">
-
-  <link rel="canonical" href="https://taravancil.com{{ .URL }}" />
-
-  <link rel="dns-prefetch" href="https://fonts.taravancil.com">
-  <link rel="preload" href="/css/style.min.css" as="style" />
-  <link rel="preload" href="/css/blog.min.css" as="style" />
-
-  <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="stylesheet" href="/css/blog.min.css" />
-  <link rel="icon" href="/images/favicon.png">
-</head>
+{{ partial "head.html" . }}
+<link rel="stylesheet" href="/css/blog.min.css" />
 
 <body class="blog home">
   {{ partial "breadcrumbs.html" . }}
