add missing semicolon

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -22,7 +22,7 @@ body.home {
     .magnify {
       width: 18px;
       margin: 0 0 0 5px;
-      filter: saturate(6) hue-rotate(20deg) contrast(1)
+      filter: saturate(6) hue-rotate(20deg) contrast(1);
     }
   }
 
