be less excited!

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -72,7 +72,7 @@
       <div class="container narrow">
         <section class="hero-blurb">
           <p class="large-text">
-            Hi! I'm Tara. I'm a software engineer at <a href="https://glitch.com">Glitch</a>, where I work on our in-browser <a href="https://glitch.com/edit">code editor</a>. I live in New York City.
+            Hi, I'm Tara. I'm a software engineer at <a href="https://glitch.com">Glitch</a>, where I work on our in-browser <a href="https://glitch.com/edit">code editor</a>. I live in New York City.
           </p>
 
           <p>
