add glitch profile to footer links

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,14 +50,20 @@
 
         <ul class="undecorated-list">
           <li>
+            <a class="undecorated-link" href="https://twitter.com/taravancil">
+              Twitter
+            </a>
+          </li>
+
+          <li>
             <a class="undecorated-link" href="https://github.com/taravancil">
               GitHub
             </a>
           </li>
 
           <li>
-            <a class="undecorated-link" href="https://twitter.com/taravancil">
-              Twitter
+            <a class="undecorated-link" href="https://glitch.com/@taravancil">
+              Glitch
             </a>
           </li>
 
