--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -7,6 +7,72 @@ body.home {
     margin: 0 0 40px 0;
   }
 
+  .hero {
+    p, nav {
+      border: 1px solid $red;
+      box-shadow: 3px 3px 0 $red;
+    }
+    p {
+      margin: auto;
+      margin-bottom: .25em;
+      padding: 1em;
+      background: #fff;
+      font-size: 28px;
+      font-weight: 700;
+      transform: rotate(-2deg);
+      line-height: 1.3;
+    }
+
+    strong {
+      font-weight: 700;
+      color: $red;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      margin: -25px 1em 0 auto;
+      max-width: 215px;
+      font-size: inherit;
+      font-weight: 600;
+      padding: 10px 20px;
+      background: #fff;
+      transform: rotate(1deg);
+    }
+
+    @media (min-width: 525px) {
+      p {
+        font-size: 30px;
+        line-height: initial;
+        max-width: 600px;
+      }
+
+      nav {
+        font-size: 16px;
+        max-width: 250px;
+      }
+    }
+
+    @media (min-width: 700px) {
+      p, nav {
+        box-shadow: 3px 3px 0 $red;
+      }
+
+      p {
+        max-width: initial;
+        line-height: 1.45;
+        font-size: 36px;
+        margin-bottom: .65em;
+      }
+
+      nav {
+        font-size: 18px;
+        max-width: 285px;
+        margin-top: -55px;
+      }
+    }
+  }
+
   .hero-blurb {
     margin: 20px 0;
 
