remove colophon from footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -32,8 +32,7 @@
             </a> -->
           </li>
 
-          <li>
-          </li>
+          <li></li>
         </ul>
       </div>
 
@@ -68,7 +67,10 @@
           </li>
 
           <li>
-            <a class="undecorated-link" href="https://instagram.com/amataranails">
+            <a
+              class="undecorated-link"
+              href="https://instagram.com/amataranails"
+            >
               Instagram (nails)
             </a>
           </li>
@@ -76,22 +78,26 @@
       </div>
 
       <div class="flex-child--right">
-        <form method="get" id="search" class="search" action="https://duckduckgo.com" onsubmit="this.elements[0].value = 'site:taravancil.com ' + this.elements[0].value;">
+        <form
+          method="get"
+          id="search"
+          class="search"
+          action="https://duckduckgo.com"
+          onsubmit="this.elements[0].value = 'site:taravancil.com ' + this.elements[0].value;"
+        >
           <div role="search" class="flex">
             <label for="q">Search</label>
-            <input type="search" placeholder="Search" name="q" value="" />
+            <input
+              type="search"
+              placeholder="Search taravancil.com"
+              name="q"
+              value=""
+            />
             <button class="btn btn--primary btn--small" aria-label="Do search">
               Search
             </button>
           </div>
         </form>
-
-        <p class="colophon">
-          This site is set in <a href="https://rsms.me/inter/">Inter UI</a> and built with <a href="https://gohugo.io">Hugo</a>.
-          It's published with <a href="https://datproject.org">dat://</a>, mirrored to https:// and seeded with <a href="https://github.com/beakerbrowser/homebase">homebase</a>.
-          Colors inspired by <a href="https://www.instagram.com/p/BZZCf_aHI33/">Beyoncé</a>. You can <a href="https://github.com/taravancil/taravancil.com">view
-            the source</a>.
-        </p>
       </div>
     </div>
 
