use new favicon instead of old avatar in nav

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="container wide">
     <div class="nav-items">
       <a href="/" class="nav-item nav-item-home-link  undecorated-link">
-        <span class="avatar small-avatar" aria-hidden="true">:-)</span>
+        <img class="icon" alt="" src="/images/favicon.png" />
         Tara Vancil
       </a>
 
