--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -8,7 +8,6 @@
   margin: 0 10px 0 0;
 }
 
-.creative-ind-spiral {
-  width: 20px;
-  margin-right: 5px;
+figure img {
+  border: 1px solid #ddd;
 }
